@@ -12,7 +12,9 @@ import java.sql.Connection;
 import java.sql.SQLException;
 import java.sql.Statement;
 import java.time.LocalDate;
+import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -21,19 +23,14 @@ public class AccountControllerTest {
     private Connection connection;
     private User testUser;
     private Ledger testLedger;
-    private UserController userController;
+
     private AccountController accountController;
     private TransactionController transactionController;
-    private LedgerController ledgerController;
     private InstallmentController installmentController;
+
     private AccountDAO accountDAO;
-    private UserDAO userDAO;
-    private LedgerDAO ledgerDAO;
     private TransactionDAO transactionDAO;
-    private CategoryDAO categoryDAO;
-    private LedgerCategoryDAO ledgerCategoryDAO;
     private InstallmentDAO installmentDAO;
-    private BudgetDAO budgetDAO;
 
 
     @BeforeEach
@@ -42,23 +39,23 @@ public class AccountControllerTest {
         readResetScript();
         runSchemaScript();
 
-        userDAO = new UserDAO(connection);
+        UserDAO userDAO = new UserDAO(connection);
         accountDAO = new AccountDAO(connection);
-        ledgerDAO = new LedgerDAO(connection);
+        LedgerDAO ledgerDAO = new LedgerDAO(connection);
         transactionDAO = new TransactionDAO(connection);
-        categoryDAO = new CategoryDAO(connection);
-        ledgerCategoryDAO = new LedgerCategoryDAO(connection);
+        CategoryDAO categoryDAO = new CategoryDAO(connection);
+        LedgerCategoryDAO ledgerCategoryDAO = new LedgerCategoryDAO(connection);
         installmentDAO = new InstallmentDAO(connection);
-        budgetDAO = new BudgetDAO(connection);
+        BudgetDAO budgetDAO = new BudgetDAO(connection);
 
-        userController = new UserController(userDAO);
-        accountController = new AccountController(accountDAO, transactionDAO, installmentDAO);
+        UserController userController = new UserController(userDAO);
+        accountController = new AccountController(accountDAO, transactionDAO);
         transactionController = new TransactionController(transactionDAO, accountDAO, ledgerDAO);
-        ledgerController = new LedgerController(ledgerDAO, transactionDAO, categoryDAO, ledgerCategoryDAO, accountDAO, budgetDAO);
+        LedgerController ledgerController = new LedgerController(ledgerDAO, transactionDAO, categoryDAO, ledgerCategoryDAO, accountDAO, budgetDAO);
         installmentController = new InstallmentController(installmentDAO, transactionDAO, accountDAO);
 
-        userController.register("testuser", "password123"); // create test user and insert into db
-        testUser=userController.login("testuser", "password123"); // login to set current user
+        userController.register("test user", "password123"); // create test user and insert into db
+        testUser=userController.login("test user", "password123"); // login to set current user
 
         testLedger=ledgerController.createLedger("Test Ledger", testUser);
     }
@@ -74,8 +71,11 @@ public class AccountControllerTest {
     private void executeSqlFile(String filePath) {
         try {
             Path path = Paths.get(filePath);
-            String sql = Files.lines(path)
-                    .collect(Collectors.joining("\n"));
+            String sql;
+            try (Stream<String> lines = Files.lines(path)) {
+                sql = lines.collect(Collectors.joining("\n"));
+            }
+
             try (Statement stmt = connection.createStatement()) {
                 for (String s : sql.split(";")) {
                     if (!s.trim().isEmpty()) {
@@ -98,13 +98,22 @@ public class AccountControllerTest {
                 null,
                 true,
                 true);
+        assertNotNull(account);
 
         Account savedAccount = accountDAO.getAccountById(account.getId());
         assertNotNull(savedAccount);
+        assertEquals(AccountType.CASH, savedAccount.getType());
+        assertEquals(AccountCategory.FUNDS, savedAccount.getCategory());
+        assertEquals(0, savedAccount.getBalance().compareTo(BigDecimal.valueOf(5000.00)));
+        assertTrue(savedAccount.getSelectable());
+        assertTrue(savedAccount.getIncludedInNetAsset());
+
+        List<Account> userAccounts = accountDAO.getAccountsByOwnerId(testUser.getId());
+        assertEquals(1, userAccounts.size());
+        assertEquals(savedAccount.getId(), userAccounts.getFirst().getId());
 
         assertEquals(1, testUser.getAccounts().size());
-        assertEquals(savedAccount.getId(), testUser.getAccounts().get(0).getId());
-        assertEquals(0, testUser.getTotalAssets().compareTo(BigDecimal.valueOf(5000.00)));
+        assertEquals(savedAccount.getId(), testUser.getAccounts().getFirst().getId());
     }
 
     @Test
@@ -112,20 +121,35 @@ public class AccountControllerTest {
         CreditAccount account = accountController.createCreditAccount(
                 "Bob's Credit Card",
                 null,
-                BigDecimal.valueOf(2000.00),
+                BigDecimal.valueOf(2000.00), //balance
                 true,
                 true,
                 testUser,
                 AccountType.CREDIT_CARD,
-                BigDecimal.valueOf(5000.00),
-                BigDecimal.valueOf(1000.00),
+                BigDecimal.valueOf(5000.00), //credit limit
+                BigDecimal.valueOf(1000.00), //current debt
                 null,
                 null);
+        assertNotNull(account);
 
         Account savedAccount = accountDAO.getAccountById(account.getId());
         assertNotNull(savedAccount);
+        assertEquals(AccountType.CREDIT_CARD, savedAccount.getType());
+        assertEquals(AccountCategory.CREDIT, savedAccount.getCategory());
+        assertEquals(0, savedAccount.getBalance().compareTo(BigDecimal.valueOf(2000.00)));
+        assertEquals(0, ((CreditAccount)savedAccount).getCreditLimit().compareTo(BigDecimal.valueOf(5000.00)));
+        assertEquals(0, ((CreditAccount)savedAccount).getCurrentDebt().compareTo(BigDecimal.valueOf(1000.00)));
+        assertTrue(savedAccount.getSelectable());
+        assertTrue(savedAccount.getIncludedInNetAsset());
+        assertNull(((CreditAccount)savedAccount).getDueDay());
+        assertNull(((CreditAccount)savedAccount).getBillDay());
+
+        List<Account> userAccounts = accountDAO.getAccountsByOwnerId(testUser.getId());
+        assertEquals(1, userAccounts.size());
+        assertEquals(savedAccount.getId(), userAccounts.getFirst().getId());
 
         assertEquals(1, testUser.getAccounts().size());
+        assertEquals(savedAccount.getId(), testUser.getAccounts().getFirst().getId());
         assertEquals(0, testUser.getTotalAssets().compareTo(BigDecimal.valueOf(2000.00)));
         assertEquals(0, testUser.getTotalLiabilities().compareTo(BigDecimal.valueOf(1000.00)));
         assertEquals(0, testUser.getNetAssets().compareTo(BigDecimal.valueOf(1000.00)));
@@ -133,21 +157,42 @@ public class AccountControllerTest {
 
     @Test
     public void testCreateLoanAccount_Success_NoReceivingAccount() throws SQLException {
-        LoanAccount account = accountController.createLoanAccount(
-                "Car Loan",
-                null,
-                true,
-                testUser,
-                60,
-                0,
+        LoanAccount account = accountController.createLoanAccount("Car Loan", null, true,
+                testUser, 60, 0,
                 BigDecimal.valueOf(3.5), //3.5% annual interest rate
                 BigDecimal.valueOf(15000.00), //loan amount
                 null, //no receiving account
-                LocalDate.now(),
-                LoanAccount.RepaymentType.EQUAL_INTEREST);
+                LocalDate.now(), LoanAccount.RepaymentType.EQUAL_INTEREST, testLedger);
+        assertNotNull(account);
+        //remaining amount 16372.80
+        assertEquals(1, account.getTransactions().size()); //initial loan disbursement transaction
 
         Account savedAccount = accountDAO.getAccountById(account.getId());
         assertNotNull(savedAccount);
+        assertEquals(AccountType.LOAN, savedAccount.getType());
+        assertEquals(AccountCategory.CREDIT, savedAccount.getCategory());
+        assertEquals(0, savedAccount.getBalance().compareTo(BigDecimal.ZERO));
+        assertFalse(savedAccount.getSelectable());
+        assertTrue(savedAccount.getIncludedInNetAsset());
+        assertEquals(60, ((LoanAccount)savedAccount).getTotalPeriods());
+        assertEquals(0, ((LoanAccount)savedAccount).getRepaidPeriods());
+        assertEquals(0, ((LoanAccount)savedAccount).getAnnualInterestRate().compareTo(BigDecimal.valueOf(3.5)));
+        assertEquals(0, ((LoanAccount)savedAccount).getLoanAmount().compareTo(BigDecimal.valueOf(15000.00)));
+        assertEquals(LoanAccount.RepaymentType.EQUAL_INTEREST, ((LoanAccount)savedAccount).getRepaymentType());
+        assertEquals(0, ((LoanAccount)savedAccount).getRemainingAmount().compareTo(BigDecimal.valueOf(16372.80)));
+
+        List<Account> userAccounts = accountDAO.getAccountsByOwnerId(testUser.getId());
+        assertEquals(1, userAccounts.size());
+        assertEquals(savedAccount.getId(), userAccounts.getFirst().getId());
+
+        List<Transaction> transactions = transactionDAO.getByAccountId(account.getId());
+        assertEquals(1, transactions.size()); //initial loan disbursement transaction
+        Transaction tx=transactions.getFirst();
+        assertEquals(0, tx.getAmount().compareTo(BigDecimal.valueOf(15000.00)));
+        assertEquals(TransactionType.TRANSFER, tx.getType());
+        assertEquals(account.getId(), tx.getFromAccount().getId());
+        assertNull(tx.getToAccount());
+        assertEquals("Loan disbursement", tx.getNote());
 
         assertEquals(1, testUser.getAccounts().size());
         assertEquals(0, testUser.getTotalAssets().compareTo(BigDecimal.ZERO));
@@ -158,30 +203,57 @@ public class AccountControllerTest {
     @Test
     public void testCreateLoanAccount_Success_WithReceivingAccount() throws SQLException {
         BasicAccount receivingAccount = accountController.createBasicAccount("Savings Account",
-                BigDecimal.valueOf(5000),
-                AccountType.CASH,
-                AccountCategory.FUNDS,
-                testUser,
-                null,
-                true,
-                true);
+                BigDecimal.valueOf(5000), AccountType.CASH, AccountCategory.FUNDS, testUser, null,
+                true, true);
 
-        LoanAccount loanAccount = accountController.createLoanAccount(
-                "Home Loan",
-                null,
-                true,
-                testUser,
-                120,
-                0,
+        LoanAccount loanAccount = accountController.createLoanAccount("Home Loan", null,
+                true, testUser, 120, 0,
                 BigDecimal.valueOf(4), //4% annual interest rate
                 BigDecimal.valueOf(200000.00), //loan amount
-                receivingAccount, //receiving account
-                LocalDate.now(),
-                LoanAccount.RepaymentType.EQUAL_INTEREST);
+                receivingAccount, LocalDate.now(), LoanAccount.RepaymentType.EQUAL_INTEREST, testLedger);
         assertNotNull(loanAccount);
+        //remaining amount 242988.00
+        assertEquals(1, loanAccount.getTransactions().size()); //initial loan disbursement transaction
+        assertEquals(1, receivingAccount.getTransactions().size()); //initial loan disbursement transaction in receiving account
 
         Account savedLoanAccount = accountDAO.getAccountById(loanAccount.getId());
         assertNotNull(savedLoanAccount);
+        assertEquals(AccountType.LOAN, savedLoanAccount.getType());
+        assertEquals(AccountCategory.CREDIT, savedLoanAccount.getCategory());
+        assertEquals(0, savedLoanAccount.getBalance().compareTo(BigDecimal.ZERO));
+        assertFalse(savedLoanAccount.getSelectable());
+        assertTrue(savedLoanAccount.getIncludedInNetAsset());
+        assertEquals(120, ((LoanAccount)savedLoanAccount).getTotalPeriods());
+        assertEquals(0, ((LoanAccount)savedLoanAccount).getRepaidPeriods());
+        assertEquals(0, ((LoanAccount)savedLoanAccount).getAnnualInterestRate().compareTo(BigDecimal.valueOf(4)));
+        assertEquals(0, ((LoanAccount)savedLoanAccount).getLoanAmount().compareTo(BigDecimal.valueOf(200000.00)));
+        assertEquals(LoanAccount.RepaymentType.EQUAL_INTEREST, ((LoanAccount)savedLoanAccount).getRepaymentType());
+        assertEquals(0, ((LoanAccount)savedLoanAccount).getRemainingAmount().compareTo(BigDecimal.valueOf(242988.00)));
+
+        Account savedReceivingAccount = accountDAO.getAccountById(receivingAccount.getId());
+        assertNotNull(savedReceivingAccount);
+        assertEquals(0, savedReceivingAccount.getBalance().compareTo(BigDecimal.valueOf(205000.00))); //5000 + 200000
+
+        List<Account> userAccounts = accountDAO.getAccountsByOwnerId(testUser.getId());
+        assertEquals(2, userAccounts.size());
+
+        List<Transaction> loanTransactions = transactionDAO.getByAccountId(loanAccount.getId());
+        assertEquals(1, loanTransactions.size()); //initial loan disbursement transaction
+        Transaction txLoan=loanTransactions.getFirst();
+        assertEquals(0, txLoan.getAmount().compareTo(BigDecimal.valueOf(200000.00)));
+        assertEquals(TransactionType.TRANSFER, txLoan.getType());
+        assertEquals(loanAccount.getId(), txLoan.getFromAccount().getId());
+        assertEquals(receivingAccount.getId(), txLoan.getToAccount().getId());
+
+        List<Transaction> receivingTransactions = transactionDAO.getByAccountId(receivingAccount.getId());
+        assertEquals(1, receivingTransactions.size()); //initial loan disbursement transaction in receiving account
+        Transaction txReceiving=receivingTransactions.getFirst();
+        assertEquals(txLoan.getId(), txReceiving.getId()); //same transaction
+
+
+        Transaction tx=loanAccount.getTransactions().getFirst(); //initial loan disbursement transaction
+        Transaction tx2=receivingAccount.getTransactions().getFirst(); //initial loan disbursement transaction in receiving account
+        assertEquals(tx.getId(), tx2.getId());
 
         assertEquals(2, testUser.getAccounts().size());
         assertEquals(0, testUser.getTotalAssets().compareTo(BigDecimal.valueOf(205000.00)));
@@ -191,20 +263,33 @@ public class AccountControllerTest {
     }
 
     @Test
-    public void testCreateBorrowing_Success_NullToAccount() throws SQLException {
-        BorrowingAccount account = accountController.createBorrowingAccount(
-                testUser,
-                "Bob",
+    public void testCreateBorrowing_NoToAccount() throws SQLException {
+        BorrowingAccount account = accountController.createBorrowingAccount(testUser, "Bob",
                 BigDecimal.valueOf(3000.00), //amount borrowed
-                null,
-                true,
-                true,
-                null,
-                LocalDate.now()
-        );
+                null, true, true, null, LocalDate.now(), testLedger);
+        assertNotNull(account);
 
         Account savedAccount = accountDAO.getAccountById(account.getId());
         assertNotNull(savedAccount);
+        assertEquals(AccountType.BORROWING, savedAccount.getType());
+        assertEquals(AccountCategory.VIRTUAL_ACCOUNT, savedAccount.getCategory());
+        assertEquals(0, savedAccount.getBalance().compareTo(BigDecimal.ZERO));
+        assertTrue(savedAccount.getSelectable());
+        assertTrue(savedAccount.getIncludedInNetAsset());
+        assertEquals(0, ((BorrowingAccount)savedAccount).getBorrowingAmount().compareTo(BigDecimal.valueOf(3000.00)));
+        assertEquals(0, ((BorrowingAccount)savedAccount).getRemainingAmount().compareTo(BigDecimal.valueOf(3000.00)));
+
+        List<Account> userAccounts = accountDAO.getAccountsByOwnerId(testUser.getId());
+        assertEquals(1, userAccounts.size());
+        assertEquals(savedAccount.getId(), userAccounts.getFirst().getId());
+
+        List<Transaction> transactions = transactionDAO.getByAccountId(account.getId());
+        assertEquals(1, transactions.size()); //initial borrowing transaction
+        Transaction tx=transactions.getFirst();
+        assertEquals(0, tx.getAmount().compareTo(BigDecimal.valueOf(3000.00)));
+        assertEquals(TransactionType.TRANSFER, tx.getType());
+        assertEquals(savedAccount.getId(), tx.getFromAccount().getId());
+        assertNull(tx.getToAccount());
 
         assertEquals(1, testUser.getAccounts().size());
         assertEquals(0, testUser.getTotalAssets().compareTo(BigDecimal.ZERO));
@@ -213,226 +298,227 @@ public class AccountControllerTest {
     }
 
     @Test
-    public void testCreateBorrowing_Success_WithToAccount() throws SQLException {
-        BasicAccount toAccount = accountController.createBasicAccount("Cash Wallet",
-                BigDecimal.valueOf(500),
-                AccountType.CASH,
-                AccountCategory.FUNDS,
-                testUser,
-                null,
-                true,
-                true);
+    public void testCreateBorrowing_WithToAccount() throws SQLException {
+        BasicAccount toAccount = accountController.createBasicAccount("Cash Wallet", BigDecimal.valueOf(500),
+                AccountType.CASH, AccountCategory.FUNDS, testUser, null, true, true);
 
-        BorrowingAccount borrowingAccount = accountController.createBorrowingAccount(
-                testUser,
-                "Alice",
+        BorrowingAccount borrowingAccount = accountController.createBorrowingAccount(testUser, "Alice",
                 BigDecimal.valueOf(1500.00), //amount borrowed
-                null,
-                true,
-                true,
-                toAccount,
-                LocalDate.now()
-        );
+                null, true, true, toAccount, LocalDate.now(), testLedger);
 
         Account savedBorrowingAccount = accountDAO.getAccountById(borrowingAccount.getId());
         assertNotNull(savedBorrowingAccount);
+
+        Account savedToAccount = accountDAO.getAccountById(toAccount.getId());
+        assertEquals(0, savedToAccount.getBalance().compareTo(BigDecimal.valueOf(2000.00))); //500 + 1500
+
+        List<Transaction> borrowingTransactions = transactionDAO.getByAccountId(borrowingAccount.getId());
+        assertEquals(1, borrowingTransactions.size()); //initial borrowing transaction
+        Transaction txBorrowing=borrowingTransactions.getFirst();
+        assertEquals(0, txBorrowing.getAmount().compareTo(BigDecimal.valueOf(1500.00)));
+
+        List<Transaction> toAccountTransactions = transactionDAO.getByAccountId(toAccount.getId());
+        assertEquals(1, toAccountTransactions.size()); //initial borrowing transaction in toAccount
+        Transaction txToAccount=toAccountTransactions.getFirst();
+        assertEquals(txBorrowing.getId(), txToAccount.getId()); //same transaction
+        assertEquals(savedToAccount.getId(), txToAccount.getToAccount().getId());
 
         assertEquals(2, testUser.getAccounts().size());
         assertEquals(0, testUser.getTotalAssets().compareTo(BigDecimal.valueOf(2000.00)));
         assertEquals(0, testUser.getTotalLiabilities().compareTo(BigDecimal.valueOf(1500.00)));
         assertEquals(0, testUser.getNetAssets().compareTo(BigDecimal.valueOf(500.00)));
         assertEquals(0, toAccount.getBalance().compareTo(BigDecimal.valueOf(2000.00)));
-
-        BorrowingAccount savedToAccount = (BorrowingAccount) accountDAO.getAccountById(savedBorrowingAccount.getId());
-        assertEquals(0, savedToAccount.getRemainingAmount().compareTo(BigDecimal.valueOf(1500.00)));
-
     }
 
     @Test
-    public void testCreateLending_Success_NullFromAccount() throws SQLException {
-        LendingAccount account = accountController.createLendingAccount(
-                testUser,
-                "Charlie",
+    public void testCreateLending_Success_NoFromAccount() throws SQLException {
+        LendingAccount account = accountController.createLendingAccount(testUser, "Charlie",
                 BigDecimal.valueOf(4000.00), //amount lent
-                null,
-                true,
-                true,
-                null,
-                LocalDate.now()
-        );
+                null, true, true, null, LocalDate.now(), testLedger);
 
         Account savedAccount = accountDAO.getAccountById(account.getId());
         assertNotNull(savedAccount);
+
+        assertEquals(AccountType.LENDING, savedAccount.getType());
+        assertEquals(AccountCategory.VIRTUAL_ACCOUNT, savedAccount.getCategory());
+        assertEquals(0, savedAccount.getBalance().compareTo(BigDecimal.valueOf(4000.00)));
+        assertTrue(savedAccount.getSelectable());
+        assertTrue(savedAccount.getIncludedInNetAsset());
+
+        List<Account> userAccounts = accountDAO.getAccountsByOwnerId(testUser.getId());
+        assertEquals(1, userAccounts.size());
+
+        List<Transaction> transactions = transactionDAO.getByAccountId(account.getId());
+        assertEquals(1, transactions.size()); //initial lending transaction
+        Transaction tx=transactions.getFirst();
+        assertEquals(0, tx.getAmount().compareTo(BigDecimal.valueOf(4000.00)));
+        assertEquals(TransactionType.TRANSFER, tx.getType());
+        assertNull(tx.getFromAccount());
+        assertEquals(savedAccount.getId(), tx.getToAccount().getId());
 
         assertEquals(1, testUser.getAccounts().size());
         assertEquals(0, testUser.getTotalAssets().compareTo(BigDecimal.valueOf(4000.00)));
         assertEquals(0, testUser.getTotalLiabilities().compareTo(BigDecimal.ZERO));
         assertEquals(0, testUser.getNetAssets().compareTo(BigDecimal.valueOf(4000.00)));
-        LendingAccount savedLendingAccount = (LendingAccount) accountDAO.getAccountById(savedAccount.getId());
-        assertEquals(0, savedLendingAccount.getBalance().compareTo(BigDecimal.valueOf(4000.00)));
     }
 
     @Test
     public void testCreateLending_Success_WithFromAccount() throws SQLException {
         BasicAccount fromAccount = accountController.createBasicAccount("Emergency Fund",
-                BigDecimal.valueOf(800),
-                AccountType.CASH,
-                AccountCategory.FUNDS,
-                testUser,
-                null,
-                true,
-                true);
+                BigDecimal.valueOf(800), AccountType.CASH, AccountCategory.FUNDS, testUser, null,
+                true, true);
 
-        LendingAccount lendingAccount = accountController.createLendingAccount(
-                testUser,
-                "Diana",
+        LendingAccount lendingAccount = accountController.createLendingAccount(testUser, "Diana",
                 BigDecimal.valueOf(250.00), //amount lent
-                null,
-                true,
-                true,
-                fromAccount,
-                LocalDate.now()
-        );
+                null, true, true, fromAccount, LocalDate.now(), testLedger);
 
         Account savedLendingAccount = accountDAO.getAccountById(lendingAccount.getId());
         assertNotNull(savedLendingAccount);
+
+        Account savedFromAccount = accountDAO.getAccountById(fromAccount.getId());
+        assertEquals(0, savedFromAccount.getBalance().compareTo(BigDecimal.valueOf(550.00))); //800 - 250
+
+        List<Transaction> lendingTransactions = transactionDAO.getByAccountId(lendingAccount.getId());
+        assertEquals(1, lendingTransactions.size()); //initial lending transaction
+        Transaction txLending=lendingTransactions.getFirst();
+        assertEquals(0, txLending.getAmount().compareTo(BigDecimal.valueOf(250.00)));
+
+        List<Transaction> fromAccountTransactions = transactionDAO.getByAccountId(fromAccount.getId());
+        assertEquals(1, fromAccountTransactions.size()); //initial lending transaction in fromAccount
+        Transaction txFromAccount=fromAccountTransactions.getFirst();
+        assertEquals(txLending.getId(), txFromAccount.getId()); //same transaction
+        assertEquals(savedFromAccount.getId(), txFromAccount.getFromAccount().getId());
 
         assertEquals(2, testUser.getAccounts().size());
         assertEquals(0, testUser.getTotalAssets().compareTo(BigDecimal.valueOf(800.00)));
         assertEquals(0, testUser.getTotalLiabilities().compareTo(BigDecimal.ZERO));
         assertEquals(0, testUser.getNetAssets().compareTo(BigDecimal.valueOf(800.00)));
         assertEquals(0, fromAccount.getBalance().compareTo(BigDecimal.valueOf(550.00)));
-
-        LendingAccount savedToAccount = (LendingAccount) accountDAO.getAccountById(savedLendingAccount.getId());
-        assertEquals(0, savedToAccount.getBalance().compareTo(BigDecimal.valueOf(250.00)));
     }
 
     @Test
     public void testDeleteBasicAccount_NullTransaction() throws SQLException {
-        BasicAccount account = accountController.createBasicAccount("Test Account",
-                BigDecimal.valueOf(1000),
-                AccountType.CASH,
-                AccountCategory.FUNDS,
-                testUser,
-                null,
-                true,
-                true);
+        BasicAccount account = accountController.createBasicAccount("Test Account", BigDecimal.valueOf(1000),
+                AccountType.CASH, AccountCategory.FUNDS, testUser, null, true, true);
 
-        accountController.deleteAccount(account, true);
+        boolean deleted = accountController.deleteAccount(account, true);
+        assertTrue(deleted);
+
         Account deletedAccount = accountDAO.getAccountById(account.getId());
         assertNull(deletedAccount);
+
+        List<Account> userAccounts = accountDAO.getAccountsByOwnerId(testUser.getId());
+        assertEquals(0, userAccounts.size());
+
         assertEquals(0, testUser.getAccounts().size());
         assertEquals(0, testUser.getTotalAssets().compareTo(BigDecimal.ZERO));
     }
 
     @Test
     public void testDeleteBasicAccount_DeleteTransaction() throws SQLException {
-        BasicAccount account = accountController.createBasicAccount("Test Account",
-                BigDecimal.valueOf(1000),
-                AccountType.CASH,
-                AccountCategory.FUNDS,
-                testUser,
-                null,
-                true,
-                true);
+        BasicAccount account = accountController.createBasicAccount("Test Account", BigDecimal.valueOf(1000),
+                AccountType.CASH, AccountCategory.FUNDS, testUser, null, true, true);
+
+        //find categories for transactions
         LedgerCategory salary=testLedger.getCategories().stream()
                 .filter(cat->cat.getName().equals("Salary"))
                 .findFirst()
-                .orElseThrow();
+                .orElse(null);
+        assertNotNull(salary);
         LedgerCategory transport=testLedger.getCategories().stream()
                 .filter(cat->cat.getName().equals("Transport"))
                 .findFirst()
-                .orElseThrow();
-        Transaction tx1 = transactionController.createIncome(
-                testLedger,
-                account,
-                salary,
-                "Monthly Salary",
-                LocalDate.now(),
-                BigDecimal.valueOf(1000)
-        );
-        Transaction tx2= transactionController.createExpense(
-                testLedger,
-                account,
-                transport,
-                "Train Ticket",
-                LocalDate.now(),
-                BigDecimal.valueOf(5.60)
-        );
+                .orElse(null);
+        assertNotNull(transport);
+
+        //create transactions linked to the account
+        Transaction tx1 = transactionController.createIncome(testLedger, account, salary, "Monthly Salary", LocalDate.now(), BigDecimal.valueOf(1000));
+        assertNotNull(tx1);
+        Transaction tx2= transactionController.createExpense(testLedger, account, transport, "Train Ticket", LocalDate.now(), BigDecimal.valueOf(5.60));
+        assertNotNull(tx2);
 
         boolean result=accountController.deleteAccount(account, true);
         assertTrue(result);
+
         Account deletedAccount = accountDAO.getAccountById(account.getId());
         assertNull(deletedAccount);
+
         assertNull(transactionDAO.getById(tx1.getId()));
         assertNull(transactionDAO.getById(tx2.getId()));
+
+        List<Transaction> accountTransactions = transactionDAO.getByAccountId(account.getId());
+        assertEquals(0, accountTransactions.size());
+
+        List<Transaction> salaryTransactions = transactionDAO.getByCategoryId(salary.getId());
+        assertEquals(0, salaryTransactions.size());
+        List<Transaction> transportTransactions = transactionDAO.getByCategoryId(transport.getId());
+        assertEquals(0, transportTransactions.size());
+        List<Transaction> ledgerTransactions = transactionDAO.getByLedgerId(testLedger.getId());
+        assertEquals(0, ledgerTransactions.size());
+
         assertEquals(0, testUser.getAccounts().size());
         assertEquals(0, testUser.getTotalAssets().compareTo(BigDecimal.ZERO));
     }
 
     @Test
     public void testDeleteBasicAccount_KeepTransactions() throws SQLException {
-        BasicAccount account = accountController.createBasicAccount("Test Account",
-                BigDecimal.valueOf(1000),
-                AccountType.CASH,
-                AccountCategory.FUNDS,
-                testUser,
-                null,
-                true,
+        BasicAccount account = accountController.createBasicAccount("Test Account", BigDecimal.valueOf(1000),
+                AccountType.CASH, AccountCategory.FUNDS, testUser, null, true,
                 true);
         LedgerCategory salary = testLedger.getCategories().stream()
                 .filter(cat -> cat.getName().equals("Salary"))
                 .findFirst()
-                .orElseThrow();
+                .orElse(null);
+        assertNotNull(salary);
         LedgerCategory transport=testLedger.getCategories().stream()
                 .filter(cat->cat.getName().equals("Transport"))
                 .findFirst()
-                .orElseThrow();
-        Transaction tx1 = transactionController.createIncome(
-                testLedger,
-                account,
-                salary,
-                "Monthly Salary",
-                LocalDate.now(),
-                BigDecimal.valueOf(1000)
-        );
-        Transaction tx2= transactionController.createExpense(
-                testLedger,
-                account,
-                transport,
-                "Train Ticket",
-                LocalDate.now(),
-                BigDecimal.valueOf(5.60)
-        );
+                .orElse(null);
+        assertNotNull(transport);
+
+        Transaction tx1 = transactionController.createIncome(testLedger, account, salary, "Monthly Salary", LocalDate.now(), BigDecimal.valueOf(1000));
+        Transaction tx2= transactionController.createExpense(testLedger, account, transport, "Train Ticket", LocalDate.now(), BigDecimal.valueOf(5.60));
+
         boolean result = accountController.deleteAccount(account, false);
         assertTrue(result);
+
         Account deletedAccount = accountDAO.getAccountById(account.getId());
         assertNull(deletedAccount);
+
         assertNotNull(transactionDAO.getById(tx1.getId()));
         assertNotNull(transactionDAO.getById(tx2.getId()));
+
+        List<Transaction> salaryTransactions = transactionDAO.getByCategoryId(salary.getId());
+        assertEquals(1, salaryTransactions.size());
+        List<Transaction> transportTransactions = transactionDAO.getByCategoryId(transport.getId());
+        assertEquals(1, transportTransactions.size());
+        List<Transaction> ledgerTransactions = transactionDAO.getByLedgerId(testLedger.getId());
+        assertEquals(2, ledgerTransactions.size());
+        List<Transaction> accountTransactions = transactionDAO.getByAccountId(account.getId());
+        assertEquals(0, accountTransactions.size());
+
         assertEquals(0, testUser.getAccounts().size());
         assertEquals(0, testUser.getTotalAssets().compareTo(BigDecimal.ZERO));
     }
 
     @Test
     public void testDeleteCreditAccount_NoTransaction() throws SQLException {
-        CreditAccount account = accountController.createCreditAccount(
-                "Test Credit Account",
-                null,
+        CreditAccount account = accountController.createCreditAccount("Test Credit Account", null,
                 BigDecimal.valueOf(1500.00), //balance
-                true,
-                true,
-                testUser,
-                AccountType.CREDIT_CARD,
+                true, true, testUser, AccountType.CREDIT_CARD,
                 BigDecimal.valueOf(3000.00), //credit limit
                 BigDecimal.valueOf(500.00), //current debt
-                null,
-                null);
+                null, null);
 
         boolean result= accountController.deleteAccount(account, true);
         assertTrue(result);
+
         Account deletedAccount = accountDAO.getAccountById(account.getId());
         assertNull(deletedAccount);
+
+        List<Account> accounts=accountDAO.getAccountsByOwnerId(testUser.getId());
+        assertEquals(0, accounts.size());
+
         assertEquals(0, testUser.getAccounts().size());
         assertEquals(0, testUser.getTotalAssets().compareTo(BigDecimal.ZERO));
         assertEquals(0, testUser.getTotalLiabilities().compareTo(BigDecimal.ZERO));
@@ -440,48 +526,47 @@ public class AccountControllerTest {
     }
 
     @Test
-    public void testDeleteCreditAccount_WithTransactions_DeleteTransactions() throws SQLException {
-        CreditAccount account = accountController.createCreditAccount(
-                "Test Credit Account",
-                null,
+    public void testDeleteCreditAccount_DeleteTransactions() throws SQLException {
+        CreditAccount account = accountController.createCreditAccount("Test Credit Account", null,
                 BigDecimal.valueOf(1500.00), //balance
-                true,
-                true,
-                testUser,
-                AccountType.CREDIT_CARD,
+                true, true, testUser, AccountType.CREDIT_CARD,
                 BigDecimal.valueOf(3000.00), //credit limit
                 BigDecimal.valueOf(500.00), //current debt
-                null,
-                null);
-        LedgerCategory shopping=testLedger.getCategories().stream()
-                .filter(cat->cat.getName().equals("Shopping"))
+                null, null);
+
+        LedgerCategory salary = testLedger.getCategories().stream()
+                .filter(cat -> cat.getName().equals("Salary"))
                 .findFirst()
-                .orElseThrow();
-        Transaction tx1= transactionController.createExpense(
-                testLedger,
-                account,
-                shopping,
-                "New Shoes",
-                LocalDate.now(),
-                BigDecimal.valueOf(120.00)
-        );
-        Transaction tx2= transactionController.createExpense(
-                testLedger,
-                account,
-                shopping,
-                "Jacket",
-                LocalDate.now(),
-                BigDecimal.valueOf(80.00)
-        );
+                .orElse(null);
+        assertNotNull(salary);
+        LedgerCategory transport=testLedger.getCategories().stream()
+                .filter(cat->cat.getName().equals("Transport"))
+                .findFirst()
+                .orElse(null);
+        assertNotNull(transport);
+
+        Transaction tx1 = transactionController.createIncome(testLedger, account, salary, "Monthly Salary", LocalDate.now(), BigDecimal.valueOf(1000));
+        Transaction tx2= transactionController.createExpense(testLedger, account, transport, "Train Ticket", LocalDate.now(), BigDecimal.valueOf(5.60));
 
         boolean result= accountController.deleteAccount(account, true);
         assertTrue(result);
+
         //deleted account and transactions from db
         Account deletedAccount = accountDAO.getAccountById(account.getId());
         assertNull(deletedAccount);
         assertNull(transactionDAO.getById(tx1.getId()));
         assertNull(transactionDAO.getById(tx2.getId()));
 
+        List<Account> accounts=accountDAO.getAccountsByOwnerId(testUser.getId());
+        assertEquals(0, accounts.size());
+
+        List<Transaction> ledgerTransactions = transactionDAO.getByLedgerId(testLedger.getId());
+        assertEquals(0, ledgerTransactions.size());
+        List<Transaction> salaryTransactions = transactionDAO.getByCategoryId(salary.getId());
+        assertEquals(0, salaryTransactions.size());
+        List<Transaction> transportTransactions = transactionDAO.getByCategoryId(transport.getId());
+        assertEquals(0, transportTransactions.size());
+
         assertEquals(0, testUser.getAccounts().size());
         assertEquals(0, testUser.getTotalAssets().compareTo(BigDecimal.ZERO));
         assertEquals(0, testUser.getTotalLiabilities().compareTo(BigDecimal.ZERO));
@@ -489,49 +574,47 @@ public class AccountControllerTest {
     }
 
     @Test
-    public void testDeleteCreditAccount_WithTransactions_KeepTransactions() throws SQLException {
-        CreditAccount account = accountController.createCreditAccount(
-                "Test Credit Account",
-                null,
+    public void testDeleteCreditAccount_KeepTransactions() throws SQLException {
+        CreditAccount account = accountController.createCreditAccount("Test Credit Account", null,
                 BigDecimal.valueOf(1500.00), //balance
-                true,
-                true,
-                testUser,
-                AccountType.CREDIT_CARD,
+                true, true, testUser, AccountType.CREDIT_CARD,
                 BigDecimal.valueOf(3000.00), //credit limit
                 BigDecimal.valueOf(500.00), //current debt
-                null,
-                null);
-        LedgerCategory shopping = testLedger.getCategories().stream()
-                .filter(cat -> cat.getName().equals("Shopping"))
+                null, null);
+        LedgerCategory salary = testLedger.getCategories().stream()
+                .filter(cat -> cat.getName().equals("Salary"))
                 .findFirst()
-                .orElseThrow();
-        Transaction tx1 = transactionController.createExpense(
-                testLedger,
-                account,
-                shopping,
-                "New Shoes",
-                LocalDate.now(),
-                BigDecimal.valueOf(120.00)
-        );
-        Transaction tx2 = transactionController.createExpense(
-                testLedger,
-                account,
-                shopping,
-                "Jacket",
-                LocalDate.now(),
-                BigDecimal.valueOf(80.00)
-        );
+                .orElse(null);
+        assertNotNull(salary);
+        LedgerCategory transport=testLedger.getCategories().stream()
+                .filter(cat->cat.getName().equals("Transport"))
+                .findFirst()
+                .orElse(null);
+        assertNotNull(transport);
+
+        Transaction tx1 = transactionController.createIncome(testLedger, account, salary, "Monthly Salary", LocalDate.now(), BigDecimal.valueOf(1000));
+        Transaction tx2= transactionController.createExpense(testLedger, account, transport, "Train Ticket", LocalDate.now(), BigDecimal.valueOf(5.60));
+
         boolean result = accountController.deleteAccount(account, false);
         assertTrue(result);
+
         //deleted account but kept transactions in db
         Account deletedAccount = accountDAO.getAccountById(account.getId());
         assertNull(deletedAccount);
         //did not delete transactions
         assertNotNull(transactionDAO.getById(tx1.getId()));
         assertNotNull(transactionDAO.getById(tx2.getId()));
-        assertEquals(2, testLedger.getTransactions().size());
 
+        List<Transaction> ledgerTransactions = transactionDAO.getByLedgerId(testLedger.getId());
+        assertEquals(2, ledgerTransactions.size());
+        List<Transaction> salaryTransactions = transactionDAO.getByCategoryId(salary.getId());
+        assertEquals(1, salaryTransactions.size());
+        List<Transaction> transportTransactions = transactionDAO.getByCategoryId(transport.getId());
+        assertEquals(1, transportTransactions.size());
+        List<Transaction> accountTransactions = transactionDAO.getByAccountId(account.getId());
+        assertEquals(0, accountTransactions.size()); //account is deleted
+
+        assertEquals(2, testLedger.getTransactions().size());
         assertEquals(0, testUser.getAccounts().size());
         assertEquals(0, testUser.getTotalAssets().compareTo(BigDecimal.ZERO));
         assertEquals(0, testUser.getTotalLiabilities().compareTo(BigDecimal.ZERO));
@@ -543,461 +626,481 @@ public class AccountControllerTest {
         LedgerCategory category=testLedger.getCategories().stream()
                 .filter(cat->cat.getName().equals("Shopping"))
                 .findFirst()
-                .orElseThrow();
-        CreditAccount account = accountController.createCreditAccount(
-                "Test Credit Account",
-                null,
+                .orElse(null);
+        assertNotNull(category);
+
+        CreditAccount account = accountController.createCreditAccount("Test Credit Account", null,
                 BigDecimal.valueOf(1500.00), //balance
-                true,
-                true,
-                testUser,
-                AccountType.CREDIT_CARD,
+                true, true, testUser, AccountType.CREDIT_CARD,
                 BigDecimal.valueOf(3000.00), //credit limit
                 BigDecimal.valueOf(500.00), //current debt
-                null,
-                null);
+                null, null);
 
-        Installment plan= installmentController.createInstallment(
-                account,
-                "Test Installment Plan",
-                BigDecimal.valueOf(1200.00),
-                12,
-                0,
-                BigDecimal.valueOf(2.00), //2% fee rate
-                Installment.Strategy.EVENLY_SPLIT,
-                LocalDate.now(),
-                category
-        );
+        Installment plan= installmentController.createInstallment(account, "Test Installment Plan",
+                BigDecimal.valueOf(1200.00), 12,
+                BigDecimal.valueOf(2.00), //2% interest
+                Installment.Strategy.EVENLY_SPLIT, LocalDate.now(), category, true);
+
         boolean result= accountController.deleteAccount(account, true);
         assertTrue(result);
 
         Account deletedAccount = accountDAO.getAccountById(account.getId());
         assertNull(deletedAccount);
+
         //deleted account and installment plan from db
         assertNull(installmentDAO.getById(plan.getId()));
-        assertNull(accountDAO.getAccountById(account.getId()));
-
-        assertEquals(0, testUser.getAccounts().size());
-        assertEquals(0, testUser.getTotalAssets().compareTo(BigDecimal.ZERO));
-        assertEquals(0, testUser.getTotalLiabilities().compareTo(BigDecimal.ZERO));
-        assertEquals(0, testUser.getNetAssets().compareTo(BigDecimal.ZERO));
+        assertEquals(0, installmentDAO.getByAccountId(testUser.getId()).size());
     }
 
     @Test
     public void testDeleteLoanAccount_Success_DeleteTransaction() throws SQLException {
-        LoanAccount account = accountController.createLoanAccount(
-                "Test Loan Account",
-                null,
-                true,
-                testUser,
-                36,
-                0,
+        LoanAccount account = accountController.createLoanAccount("Test Loan Account", null,
+                true, testUser, 36, 0,
                 BigDecimal.valueOf(5.0), //5% annual interest rate
                 BigDecimal.valueOf(10000.00), //loan amount
                 null, //no receiving account
-                LocalDate.now(),
-                LoanAccount.RepaymentType.EQUAL_INTEREST);
-        Transaction tx=account.getOutgoingTransactions().get(0); //initial loan disbursement transaction
+                LocalDate.now(), LoanAccount.RepaymentType.EQUAL_INTEREST, testLedger);
+
+        Transaction tx=account.getTransactions().getFirst(); //initial loan disbursement transaction
 
         boolean result = accountController.deleteAccount(account, true);
         assertTrue(result);
+
         Account deletedAccount = accountDAO.getAccountById(account.getId());
         assertNull(deletedAccount);
+
+        //deleted transaction from db
+        assertNull(transactionDAO.getById(tx.getId()));
+
         assertEquals(0, testUser.getAccounts().size());
         assertEquals(0, testUser.getTotalAssets().compareTo(BigDecimal.ZERO));
         assertEquals(0, testUser.getTotalLiabilities().compareTo(BigDecimal.ZERO));
         assertEquals(0, testUser.getNetAssets().compareTo(BigDecimal.ZERO));
-        assertNull(transactionDAO.getById(tx.getId()));
     }
 
     @Test
     public void testDeleteLoanAccount_Success_KeepTransaction() throws SQLException {
-        LoanAccount account = accountController.createLoanAccount(
-                "Test Loan Account",
-                null,
-                true,
-                testUser,
-                36,
-                0,
+        LoanAccount account = accountController.createLoanAccount("Test Loan Account", null,
+                true, testUser, 36, 0,
                 BigDecimal.valueOf(5.0), //5% annual interest rate
                 BigDecimal.valueOf(10000.00), //loan amount
                 null, //no receiving account
-                LocalDate.now(),
-                LoanAccount.RepaymentType.EQUAL_INTEREST);
-        Transaction tx=account.getOutgoingTransactions().get(0); //initial loan disbursement transaction
+                LocalDate.now(), LoanAccount.RepaymentType.EQUAL_INTEREST, testLedger);
+
+        Transaction tx=account.getTransactions().getFirst(); //initial loan disbursement transaction
 
         accountController.repayLoan(account, null, testLedger); //make a repayment to have another transaction
-        Transaction tx2=account.getIncomingTransactions().get(0); //repayment transaction
+        Transaction tx2=account.getTransactions().get(1); //repayment transaction
 
         boolean result = accountController.deleteAccount(account, false);
         assertTrue(result);
+
         Account deletedAccount = accountDAO.getAccountById(account.getId());
         assertNull(deletedAccount);
+
+        assertNotNull(transactionDAO.getById(tx.getId()));
+        assertNotNull(transactionDAO.getById(tx2.getId()));
+
         assertEquals(0, testUser.getAccounts().size());
         assertEquals(0, testUser.getTotalAssets().compareTo(BigDecimal.ZERO));
         assertEquals(0, testUser.getTotalLiabilities().compareTo(BigDecimal.ZERO));
         assertEquals(0, testUser.getNetAssets().compareTo(BigDecimal.ZERO));
+    }
+
+    @Test
+    public void testDeleteLoanAccount_ReceivingAccount_KeepTransaction() throws SQLException {
+        BasicAccount receivingAccount = accountController.createBasicAccount("Savings Account",
+                BigDecimal.valueOf(5000), AccountType.CASH, AccountCategory.FUNDS, testUser, null,
+                true, true);
+
+        LoanAccount loanAccount = accountController.createLoanAccount("Home Loan", null,
+                true, testUser, 120, 0,
+                BigDecimal.valueOf(4), //4% annual interest rate
+                BigDecimal.valueOf(200000.00), //loan amount
+                receivingAccount, LocalDate.now(), LoanAccount.RepaymentType.EQUAL_INTEREST, testLedger);
+
+        Transaction tx=loanAccount.getTransactions().getFirst(); //initial loan disbursement transaction
+
+        boolean result = accountController.deleteAccount(loanAccount, false);
+        assertTrue(result);
+
+        Account deletedAccount = accountDAO.getAccountById(loanAccount.getId());
+        assertNull(deletedAccount);
+
         assertNotNull(transactionDAO.getById(tx.getId()));
-        assertNotNull(transactionDAO.getById(tx2.getId()));
+        List<Transaction> ledgerTransactions = transactionDAO.getByLedgerId(testLedger.getId());
+        assertEquals(1, ledgerTransactions.size());
+        Transaction txInLedger=ledgerTransactions.getFirst();
+        assertEquals(tx.getId(), txInLedger.getId());
+        List<Transaction> receivingAccountTransactions = transactionDAO.getByAccountId(receivingAccount.getId());
+        assertEquals(1, receivingAccountTransactions.size());
+        Transaction txInReceiving=receivingAccountTransactions.getFirst();
+        assertEquals(tx.getId(), txInReceiving.getId());
+
+        assertEquals(1, testUser.getAccounts().size()); //receiving account still exists
+        assertEquals(0, testUser.getTotalAssets().compareTo(BigDecimal.valueOf(205000.00)));
+        assertEquals(0, testUser.getTotalLiabilities().compareTo(BigDecimal.ZERO));
+        assertEquals(0, testUser.getNetAssets().compareTo(BigDecimal.valueOf(205000.00)));
     }
 
     @Test
     public void testDeleteBorrowing_Success_DeleteTransaction() throws SQLException {
-        BorrowingAccount account = accountController.createBorrowingAccount(
-                testUser,
-                "Eve",
+        BorrowingAccount account = accountController.createBorrowingAccount(testUser, "Eve",
                 BigDecimal.valueOf(2000.00), //amount borrowed
-                null,
-                true,
-                true,
-                null,
-                LocalDate.now()
-        );
-        Transaction tx=account.getOutgoingTransactions().get(0); //initial borrowing transaction
+                null, true, true, null, LocalDate.now(), testLedger);
+
+        Transaction tx=account.getTransactions().getFirst(); //initial borrowing transaction
 
         boolean result = accountController.deleteAccount(account, true);
         assertTrue(result);
+
         Account deletedAccount = accountDAO.getAccountById(account.getId());
         assertNull(deletedAccount);
+
+        assertNull(transactionDAO.getById(tx.getId()));
+        List<Transaction> ledgerTransactions = transactionDAO.getByLedgerId(testLedger.getId());
+        assertEquals(0, ledgerTransactions.size());
+
         assertEquals(0, testUser.getAccounts().size());
         assertEquals(0, testUser.getTotalAssets().compareTo(BigDecimal.ZERO));
         assertEquals(0, testUser.getTotalLiabilities().compareTo(BigDecimal.ZERO));
         assertEquals(0, testUser.getNetAssets().compareTo(BigDecimal.ZERO));
-        assertNull(transactionDAO.getById(tx.getId()));
     }
 
     @Test
     public void testDeleteBorrowing_Success_KeepTransaction() throws SQLException {
-        BorrowingAccount account = accountController.createBorrowingAccount(
-                testUser,
-                "Eve",
+        BorrowingAccount account = accountController.createBorrowingAccount(testUser, "Eve",
                 BigDecimal.valueOf(2000.00), //amount borrowed
-                null,
-                true,
-                true,
-                null,
-                LocalDate.now()
-        );
-        Transaction tx=account.getOutgoingTransactions().get(0); //initial borrowing transaction
+                null, true, true, null, LocalDate.now(), testLedger);
+
+        Transaction tx=account.getTransactions().getFirst(); //initial borrowing transaction
 
         boolean result = accountController.deleteAccount(account, false);
         assertTrue(result);
+
         Account deletedAccount = accountDAO.getAccountById(account.getId());
         assertNull(deletedAccount);
+
         assertEquals(0, testUser.getAccounts().size());
         assertEquals(0, testUser.getTotalAssets().compareTo(BigDecimal.ZERO));
         assertEquals(0, testUser.getTotalLiabilities().compareTo(BigDecimal.ZERO));
         assertEquals(0, testUser.getNetAssets().compareTo(BigDecimal.ZERO));
+
         assertNotNull(transactionDAO.getById(tx.getId()));
+        List<Transaction> ledgerTransactions = transactionDAO.getByLedgerId(testLedger.getId());
+        assertEquals(1, ledgerTransactions.size());
     }
 
     @Test
     public void testDeleteLending_Success_DeleteTransaction() throws SQLException {
-        LendingAccount account = accountController.createLendingAccount(
-                testUser,
-                "Frank",
+        LendingAccount account = accountController.createLendingAccount(testUser, "Frank",
                 BigDecimal.valueOf(1000.00), //amount lent
-                null,
-                true,
-                true,
-                null,
-                LocalDate.now()
-        );
-        Transaction tx=account.getIncomingTransactions().get(0); //initial lending transaction
+                null, true, true, null, LocalDate.now(), testLedger);
+
+        Transaction tx=account.getTransactions().getFirst(); //initial lending transaction
 
         boolean result = accountController.deleteAccount(account, true);
         assertTrue(result);
+
         Account deletedAccount = accountDAO.getAccountById(account.getId());
         assertNull(deletedAccount);
+
         assertEquals(0, testUser.getAccounts().size());
         assertEquals(0, testUser.getTotalAssets().compareTo(BigDecimal.ZERO));
         assertEquals(0, testUser.getTotalLiabilities().compareTo(BigDecimal.ZERO));
         assertEquals(0, testUser.getNetAssets().compareTo(BigDecimal.ZERO));
+
         assertNull(transactionDAO.getById(tx.getId()));
+        List<Transaction> ledgerTransactions = transactionDAO.getByLedgerId(testLedger.getId());
+        assertEquals(0, ledgerTransactions.size());
     }
+
     @Test
-    public void testDeleteLending_Success_KeepTransaction() throws SQLException {
-        LendingAccount account = accountController.createLendingAccount(
-                testUser,
-                "Frank",
+    public void testDeleteLending_KeepTransaction() throws SQLException {
+        LendingAccount account = accountController.createLendingAccount(testUser, "Frank",
                 BigDecimal.valueOf(1000.00), //amount lent
-                null,
-                true,
-                true,
-                null,
-                LocalDate.now()
-        );
-        Transaction tx=account.getIncomingTransactions().get(0); //initial lending transaction
+                null, true, true, null, LocalDate.now(), testLedger);
+
+        Transaction tx=account.getTransactions().getFirst(); //initial lending transaction
 
         boolean result = accountController.deleteAccount(account, false);
         assertTrue(result);
+
         Account deletedAccount = accountDAO.getAccountById(account.getId());
         assertNull(deletedAccount);
+
         assertEquals(0, testUser.getAccounts().size());
         assertEquals(0, testUser.getTotalAssets().compareTo(BigDecimal.ZERO));
         assertEquals(0, testUser.getTotalLiabilities().compareTo(BigDecimal.ZERO));
         assertEquals(0, testUser.getNetAssets().compareTo(BigDecimal.ZERO));
+
         assertNotNull(transactionDAO.getById(tx.getId()));
+        List<Transaction> ledgerTransactions = transactionDAO.getByLedgerId(testLedger.getId());
+        assertEquals(1, ledgerTransactions.size());
     }
 
     @Test
-    public void testPayDebt_Success_NullFromAccount() throws SQLException {
-        CreditAccount account = accountController.createCreditAccount(
-                "Bob's Credit Card",
-                null,
-                BigDecimal.valueOf(2000.00),
-                true,
-                true,
-                testUser,
+    public void testPayDebt_NullFromAccount() throws SQLException {
+        CreditAccount account = accountController.createCreditAccount("Bob's Credit Card", null,
+                BigDecimal.valueOf(2000.00), true, true, testUser,
                 AccountType.CREDIT_CARD,
                 BigDecimal.valueOf(5000.00),
                 BigDecimal.valueOf(3000.00), //current debt
-                null,
-                null);
+                null, null);
 
         boolean result= accountController.repayDebt(account, BigDecimal.valueOf(500.00), null, testLedger);
         assertTrue(result);
-        Transaction tx=account.getIncomingTransactions().get(0); //repayment transaction
+
+        Transaction tx=account.getTransactions().getFirst(); //repayment transaction
         assertNotNull(transactionDAO.getById(tx.getId()));
+
+        List<Transaction> ledgerTransactions = transactionDAO.getByLedgerId(testLedger.getId());
+        assertEquals(1, ledgerTransactions.size());
+        Transaction txInLedger=ledgerTransactions.getFirst();
+        assertEquals(tx.getId(), txInLedger.getId());
+        List<Transaction> accountTransactions = transactionDAO.getByAccountId(account.getId());
+        assertEquals(1, accountTransactions.size());
+        Transaction txInAccount=accountTransactions.getFirst();
+        assertEquals(tx.getId(), txInAccount.getId());
+
+        CreditAccount savedAccount= (CreditAccount) accountDAO.getAccountById(account.getId());
+        assertEquals(0, savedAccount.getCurrentDebt().compareTo(BigDecimal.valueOf(2500.00)));
 
         assertEquals(0, account.getCurrentDebt().compareTo(BigDecimal.valueOf(2500.00)));
         assertEquals(0, testUser.getTotalLiabilities().compareTo(BigDecimal.valueOf(2500.00)));
-
     }
 
     @Test
-    public void testPayDebt_Success_WithFromAccount() throws SQLException {
+    public void testPayDebt_WithFromAccount() throws SQLException {
         BasicAccount fromAccount = accountController.createBasicAccount("Checking Account",
-                BigDecimal.valueOf(1000),
-                AccountType.CASH,
-                AccountCategory.FUNDS,
-                testUser,
-                null,
-                true,
-                true);
+                BigDecimal.valueOf(1000), AccountType.CASH, AccountCategory.FUNDS, testUser, null,
+                true, true);
 
-        CreditAccount account = accountController.createCreditAccount(
-                "Bob's Credit Card",
-                null,
-                BigDecimal.valueOf(2000.00),
-                true,
-                true,
-                testUser,
+        CreditAccount account = accountController.createCreditAccount("Bob's Credit Card", null,
+                BigDecimal.valueOf(2000.00), true, true, testUser,
                 AccountType.CREDIT_CARD,
                 BigDecimal.valueOf(5000.00),
                 BigDecimal.valueOf(3000.00), //current debt
-                null,
-                null);
+                null, null);
 
         boolean result= accountController.repayDebt(account, BigDecimal.valueOf(800.00), fromAccount, testLedger);
         assertTrue(result);
-        Transaction tx=account.getIncomingTransactions().get(0); //repayment transaction
+
+        Transaction tx=account.getTransactions().getFirst(); //repayment transaction
         assertNotNull(transactionDAO.getById(tx.getId()));
-        Transaction tx2=fromAccount.getOutgoingTransactions().get(0); //transfer from fromAccount transaction
-        assertEquals(tx.getId(), tx2.getId());
+
+        List<Transaction> ledgerTransactions = transactionDAO.getByLedgerId(testLedger.getId());
+        assertEquals(1, ledgerTransactions.size());
+        Transaction txInLedger=ledgerTransactions.getFirst();
+        assertEquals(tx.getId(), txInLedger.getId());
+        List<Transaction> accountTransactions = transactionDAO.getByAccountId(account.getId());
+        assertEquals(1, accountTransactions.size());
+        Transaction txInAccount=accountTransactions.getFirst();
+        assertEquals(tx.getId(), txInAccount.getId());
+        List<Transaction> fromAccountTransactions = transactionDAO.getByAccountId(fromAccount.getId());
+        assertEquals(1, fromAccountTransactions.size());
+        Transaction txInFromAccount=fromAccountTransactions.getFirst();
+        assertEquals(tx.getId(), txInFromAccount.getId());
+
+        CreditAccount savedAccount= (CreditAccount) accountDAO.getAccountById(account.getId());
+        assertEquals(0, savedAccount.getCurrentDebt().compareTo(BigDecimal.valueOf(2200.00)));
+
+        Account updatedFromAccount= accountDAO.getAccountById(fromAccount.getId());
+        assertEquals(0, updatedFromAccount.getBalance().compareTo(BigDecimal.valueOf(200.00)));
 
         assertEquals(0, account.getCurrentDebt().compareTo(BigDecimal.valueOf(2200.00)));
         assertEquals(0, fromAccount.getBalance().compareTo(BigDecimal.valueOf(200.00)));
         assertEquals(0, testUser.getTotalLiabilities().compareTo(BigDecimal.valueOf(2200.00)));
-
     }
 
     @Test
-    public void testPayLoan_Success_NullFromAccount() throws SQLException {
-        LoanAccount account = accountController.createLoanAccount(
-                "Personal Loan",
-                null,
-                true,
-                testUser,
-                24,
-                0,
+    public void testPayLoan_NullFromAccount() throws SQLException {
+        LoanAccount account = accountController.createLoanAccount("Personal Loan", null,
+                true, testUser, 24, 0,
                 BigDecimal.valueOf(4), //6% annual interest rate
                 BigDecimal.valueOf(5000.00), //loan amount
                 null, //no receiving account
-                LocalDate.now(),
-                LoanAccount.RepaymentType.EQUAL_INTEREST);
+                LocalDate.now(), LoanAccount.RepaymentType.EQUAL_INTEREST, testLedger);
 
         boolean result=accountController.repayLoan(account, null, testLedger);
         assertTrue(result);
 
-        Transaction tx=account.getIncomingTransactions().get(0); //repayment transaction
+        Transaction tx=account.getTransactions().getFirst(); //repayment transaction
         assertNotNull(transactionDAO.getById(tx.getId()));
 
-        assertEquals(0, account.getRemainingAmount().compareTo(BigDecimal.valueOf(4993.76))); //first installment
-        assertEquals(1, account.getIncomingTransactions().size());
-        assertEquals(0, testUser.getTotalLiabilities().compareTo(BigDecimal.valueOf(4993.76)));
+        List<Transaction> ledgerTransactions = transactionDAO.getByLedgerId(testLedger.getId());
+        assertEquals(2, ledgerTransactions.size());
+        Transaction txInLedger=ledgerTransactions.get(1);
+        assertEquals(tx.getId(), txInLedger.getId());
+        List<Transaction> accountTransactions = transactionDAO.getByAccountId(account.getId());
+        assertEquals(2, accountTransactions.size());
+        Transaction txInAccount=accountTransactions.get(1);
+        assertEquals(tx.getId(), txInAccount.getId());
 
+        LoanAccount savedAccount= (LoanAccount) accountDAO.getAccountById(account.getId());
+        assertEquals(0, savedAccount.getRemainingAmount().compareTo(BigDecimal.valueOf(4993.76)));
+
+        assertEquals(0, account.getRemainingAmount().compareTo(BigDecimal.valueOf(4993.76)));
+        assertEquals(2, account.getTransactions().size());
+        assertEquals(0, testUser.getTotalLiabilities().compareTo(BigDecimal.valueOf(4993.76)));
     }
 
     @Test
-    public void testPayLoan_Success_WithFromAccount() throws SQLException {
+    public void testPayLoan_WithFromAccount() throws SQLException {
         BasicAccount fromAccount = accountController.createBasicAccount("Checking Account",
-                BigDecimal.valueOf(2000),
-                AccountType.CASH,
-                AccountCategory.FUNDS,
-                testUser,
-                null,
-                true,
-                true);
+                BigDecimal.valueOf(2000), AccountType.CASH, AccountCategory.FUNDS, testUser, null,
+                true, true);
 
-        LoanAccount account = accountController.createLoanAccount(
-                "Personal Loan",
-                null,
-                true,
-                testUser,
-                24,
-                0,
+        LoanAccount account = accountController.createLoanAccount("Personal Loan", null,
+                true, testUser, 24, 0,
                 BigDecimal.valueOf(4), //6% annual interest rate
                 BigDecimal.valueOf(5000.00), //loan amount
                 null, //no receiving account
-                LocalDate.now(),
-                LoanAccount.RepaymentType.EQUAL_INTEREST);
+                LocalDate.now(), LoanAccount.RepaymentType.EQUAL_INTEREST, testLedger);
 
         boolean result=accountController.repayLoan(account, fromAccount, testLedger);
         assertTrue(result);
 
-        Transaction tx=account.getIncomingTransactions().get(0); //repayment transaction
-        assertNotNull(transactionDAO.getById(tx.getId()));
-        Transaction tx2=fromAccount.getOutgoingTransactions().get(0); //transfer from fromAccount transaction
-        assertEquals(tx.getId(), tx2.getId());
+        List<Transaction> ledgerTransactions = transactionDAO.getByLedgerId(testLedger.getId());
+        assertEquals(2, ledgerTransactions.size());
+
+        List<Transaction> accountTransactions = transactionDAO.getByAccountId(account.getId());
+        assertEquals(2, accountTransactions.size());
+
+        List<Transaction> fromAccountTransactions = transactionDAO.getByAccountId(fromAccount.getId());
+        assertEquals(1, fromAccountTransactions.size());
+
+        LoanAccount savedAccount= (LoanAccount) accountDAO.getAccountById(account.getId());
+        assertEquals(0, savedAccount.getRemainingAmount().compareTo(BigDecimal.valueOf(4993.76)));
+
+        Account updatedFromAccount= accountDAO.getAccountById(fromAccount.getId());
+        assertEquals(0, updatedFromAccount.getBalance().compareTo(BigDecimal.valueOf(1782.88)));
 
         assertEquals(0, account.getRemainingAmount().compareTo(BigDecimal.valueOf(4993.76))); //first installment
-        assertEquals(1, account.getIncomingTransactions().size());
+        assertEquals(2, account.getTransactions().size());
         assertEquals(0, fromAccount.getBalance().compareTo(BigDecimal.valueOf(1782.88)));
         assertEquals(0, testUser.getTotalLiabilities().compareTo(BigDecimal.valueOf(4993.76)));
     }
 
     @Test
-    public void testPayBorrowing_Success_NullFromAccount() throws SQLException {
-
-        BorrowingAccount account = accountController.createBorrowingAccount(
-                testUser,
-                "Alice",
+    public void testPayBorrowing_NullFromAccount() throws SQLException {
+        BorrowingAccount account = accountController.createBorrowingAccount(testUser, "Alice",
                 BigDecimal.valueOf(1500.00), //amount borrowed
-                null,
-                true,
-                true,
-                null,
-                LocalDate.now()
-        );
+                null, true, true, null, LocalDate.now(), testLedger);
 
         boolean result=accountController.payBorrowing(account, BigDecimal.valueOf(300.00), null, testLedger);
         assertTrue(result);
 
+        List<Transaction> ledgerTransactions = transactionDAO.getByLedgerId(testLedger.getId());
+        assertEquals(2, ledgerTransactions.size());
+        List<Transaction> accountTransactions = transactionDAO.getByAccountId(account.getId());
+        assertEquals(2, accountTransactions.size());
+
+        BorrowingAccount savedAccount= (BorrowingAccount) accountDAO.getAccountById(account.getId());
+        assertEquals(0, savedAccount.getRemainingAmount().compareTo(BigDecimal.valueOf(1200.00)));
+
         assertEquals(0, account.getRemainingAmount().compareTo(BigDecimal.valueOf(1200.00)));
-        assertEquals(1, account.getOutgoingTransactions().size()); //initial borrowing + repayment
-        assertEquals(1, account.getIncomingTransactions().size());
+        assertEquals(2, account.getTransactions().size()); //initial borrowing + repayment
         assertEquals(0, testUser.getTotalLiabilities().compareTo(BigDecimal.valueOf(1200.00)));
     }
 
     @Test
-    public void testPayBorrowing_Success_WithFromAccount() throws SQLException {
+    public void testPayBorrowing_WithFromAccount() throws SQLException {
         BasicAccount fromAccount = accountController.createBasicAccount("Checking Account",
-                BigDecimal.valueOf(1000),
-                AccountType.CASH,
-                AccountCategory.FUNDS,
-                testUser,
-                null,
-                true,
-                true);
+                BigDecimal.valueOf(1000), AccountType.CASH, AccountCategory.FUNDS, testUser, null,
+                true, true);
 
-        BorrowingAccount account = accountController.createBorrowingAccount(
-                testUser,
-                "Alice",
+        BorrowingAccount account = accountController.createBorrowingAccount(testUser, "Alice",
                 BigDecimal.valueOf(1500.00), //amount borrowed
-                null,
-                true,
-                true,
-                null,
-                LocalDate.now()
+                null, true, true, null, LocalDate.now(), testLedger
         );
 
         boolean result=accountController.payBorrowing(account, BigDecimal.valueOf(400.00), fromAccount, testLedger);
         assertTrue(result);
 
+        List<Transaction> ledgerTransactions = transactionDAO.getByLedgerId(testLedger.getId());
+        assertEquals(2, ledgerTransactions.size());
+        List<Transaction> accountTransactions = transactionDAO.getByAccountId(account.getId());
+        assertEquals(2, accountTransactions.size());
+        List<Transaction> fromAccountTransactions = transactionDAO.getByAccountId(fromAccount.getId());
+        assertEquals(1, fromAccountTransactions.size());
+
+        BorrowingAccount savedAccount= (BorrowingAccount) accountDAO.getAccountById(account.getId());
+        assertEquals(0, savedAccount.getRemainingAmount().compareTo(BigDecimal.valueOf(1100.00)));
+
+        Account updatedFromAccount= accountDAO.getAccountById(fromAccount.getId());
+        assertEquals(0, updatedFromAccount.getBalance().compareTo(BigDecimal.valueOf(600.00)));
+
         assertEquals(0, account.getRemainingAmount().compareTo(BigDecimal.valueOf(1100.00)));
-        assertEquals(1, account.getOutgoingTransactions().size());
-        assertEquals(1, account.getIncomingTransactions().size());
-        assertEquals(1, fromAccount.getOutgoingTransactions().size());
+        assertEquals(2, account.getTransactions().size());
+        assertEquals(1, fromAccount.getTransactions().size());
         assertEquals(0, fromAccount.getBalance().compareTo(BigDecimal.valueOf(600.00)));
         assertEquals(0, testUser.getTotalLiabilities().compareTo(BigDecimal.valueOf(1100.00)));
     }
 
     @Test
-    public void testReceiveLending_Success_NullToAccount() throws SQLException {
-        LendingAccount account = accountController.createLendingAccount(
-                testUser,
-                "Frank",
+    public void testReceiveLending_NullToAccount() throws SQLException {
+        LendingAccount account = accountController.createLendingAccount(testUser, "Frank",
                 BigDecimal.valueOf(1000.00), //amount lent
-                null,
-                true,
-                true,
-                null,
-                LocalDate.now()
-        );
+                null, true, true, null, LocalDate.now(), testLedger);
 
         boolean result=accountController.receiveLending(account, BigDecimal.valueOf(200.00), null, testLedger);
         assertTrue(result);
 
+        List<Transaction> ledgerTransactions = transactionDAO.getByLedgerId(testLedger.getId());
+        assertEquals(2, ledgerTransactions.size());
+        List<Transaction> accountTransactions = transactionDAO.getByAccountId(account.getId());
+        assertEquals(2, accountTransactions.size());
+
+        LendingAccount savedAccount= (LendingAccount) accountDAO.getAccountById(account.getId());
+        assertEquals(0, savedAccount.getBalance().compareTo(BigDecimal.valueOf(800.00)));
+
         assertEquals(0, account.getBalance().compareTo(BigDecimal.valueOf(800.00)));
-        assertEquals(1, account.getIncomingTransactions().size());
-        assertEquals(1, account.getOutgoingTransactions().size());
+        assertEquals(2, account.getTransactions().size()); //initial lending + receiving
         assertEquals(0, testUser.getTotalAssets().compareTo(BigDecimal.valueOf(800.00)));
     }
 
     @Test
-    public void testReceiveLending_Success_WithToAccount() throws SQLException {
+    public void testReceiveLending_WithToAccount() throws SQLException {
         BasicAccount toAccount = accountController.createBasicAccount("Checking Account",
-                BigDecimal.valueOf(500),
-                AccountType.CASH,
-                AccountCategory.FUNDS,
-                testUser,
-                null,
-                true,
-                true);
+                BigDecimal.valueOf(500), AccountType.CASH, AccountCategory.FUNDS, testUser,
+                null, true, true);
 
-        LendingAccount account = accountController.createLendingAccount(
-                testUser,
-                "Frank",
+        LendingAccount account = accountController.createLendingAccount(testUser, "Frank",
                 BigDecimal.valueOf(1000.00), //amount lent
-                null,
-                true,
-                true,
-                null,
-                LocalDate.now()
-        );
+                null, true, true, null, LocalDate.now(), testLedger);
 
         boolean result=accountController.receiveLending(account, BigDecimal.valueOf(300.00), toAccount, testLedger);
         assertTrue(result);
 
+        List<Transaction> ledgerTransactions = transactionDAO.getByLedgerId(testLedger.getId());
+        assertEquals(2, ledgerTransactions.size());
+        List<Transaction> accountTransactions = transactionDAO.getByAccountId(account.getId());
+        assertEquals(2, accountTransactions.size());
+        List<Transaction> toAccountTransactions = transactionDAO.getByAccountId(toAccount.getId());
+        assertEquals(1, toAccountTransactions.size());
+
+        LendingAccount savedAccount= (LendingAccount) accountDAO.getAccountById(account.getId());
+        assertEquals(0, savedAccount.getBalance().compareTo(BigDecimal.valueOf(700.00)));
+
+        Account updatedToAccount= accountDAO.getAccountById(toAccount.getId());
+        assertEquals(0, updatedToAccount.getBalance().compareTo(BigDecimal.valueOf(800.00)));
+
         assertEquals(0, account.getBalance().compareTo(BigDecimal.valueOf(700.00)));
-        assertEquals(1, account.getIncomingTransactions().size());
-        assertEquals(1, account.getOutgoingTransactions().size());
-        assertEquals(1, toAccount.getIncomingTransactions().size());
+        assertEquals(2, account.getTransactions().size());
+        assertEquals(1, toAccount.getTransactions().size()); //transfer to toAccount transaction
         assertEquals(0, toAccount.getBalance().compareTo(BigDecimal.valueOf(800.00)));
         assertEquals(0, testUser.getTotalAssets().compareTo(BigDecimal.valueOf(1500.00)));
     }
 
-
     @Test
     public void testEditBasicAccount_Success() throws SQLException {
         BasicAccount account = accountController.createBasicAccount("Old Account Name",
-                BigDecimal.valueOf(1200),
-                AccountType.CASH,
-                AccountCategory.FUNDS,
-                testUser,
-                "Initial Notes",
-                true,
-                true);
+                BigDecimal.valueOf(1200), AccountType.CASH, AccountCategory.FUNDS, testUser,
+                "Initial Notes", true, true);
 
-        boolean result= accountController.editBasicAccount(
-                account,
-                "New Account Name",
-                BigDecimal.valueOf(1500),
-                "Updated Notes",
-                false,
-                false
-        );
+        boolean result= accountController.editBasicAccount(account, "New Account Name",
+                BigDecimal.valueOf(1500), "Updated Notes", false, false);
         assertTrue(result);
 
         Account editedAccount = accountDAO.getAccountById(account.getId());
@@ -1007,36 +1110,23 @@ public class AccountControllerTest {
         assertEquals("Updated Notes", editedAccount.getNotes());
         assertFalse(editedAccount.getIncludedInNetAsset());
         assertFalse(editedAccount.getSelectable());
-
     }
 
     @Test
     public void testEditCreditAccount_Success() throws SQLException {
-        CreditAccount account = accountController.createCreditAccount(
-                "My Credit Card",
-                "Initial Notes",
-                BigDecimal.valueOf(2500.00), //balance
-                true,
-                true,
-                testUser,
-                AccountType.CREDIT_CARD,
+        CreditAccount account = accountController.createCreditAccount("My Credit Card",
+                "Initial Notes", BigDecimal.valueOf(2500.00), //balance
+                true, true, testUser, AccountType.CREDIT_CARD,
                 BigDecimal.valueOf(6000.00), //credit limit
                 BigDecimal.valueOf(1500.00), //current debt
-                null,
-                null);
+                null, null);
 
-        boolean result = accountController.editCreditAccount(
-                account,
-                "Updated Credit Card",
+        boolean result = accountController.editCreditAccount(account, "Updated Credit Card",
                 BigDecimal.valueOf(3000.00), //new balance
-                "Updated Notes",
-                false,
-                false,
+                "Updated Notes", false, false,
                 BigDecimal.valueOf(7000.00), //new credit limit
                 BigDecimal.valueOf(1200.00), //new current debt
-                15,
-                30
-        );
+                15, 30);
         assertTrue(result);
 
         Account editedAccount = accountDAO.getAccountById(account.getId());
@@ -1048,40 +1138,28 @@ public class AccountControllerTest {
         assertFalse(editedAccount.getSelectable());
         assertEquals(15, ((CreditAccount) editedAccount).getBillDay());
         assertEquals(30, ((CreditAccount) editedAccount).getDueDay());
-
-
         assertEquals(0, ((CreditAccount) editedAccount).getCreditLimit().compareTo(BigDecimal.valueOf(7000.00)));
         assertEquals(0, ((CreditAccount) editedAccount).getCurrentDebt().compareTo(BigDecimal.valueOf(1200.00)));
     }
 
     @Test
     public void testEditLoanAccount_Success() throws SQLException {
-        LoanAccount account = accountController.createLoanAccount(
-                "Car Loan",
-                "Initial Notes",
-                true,
-                testUser,
-                48,
-                0,
+        LoanAccount account = accountController.createLoanAccount("Car Loan", "Initial Notes",
+                true, testUser, 48, 0,
                 BigDecimal.valueOf(3.5), //3.5% annual interest rate
                 BigDecimal.valueOf(20000.00), //loan amount
                 null, //no receiving account
-                LocalDate.now(),
-                LoanAccount.RepaymentType.EQUAL_PRINCIPAL);
+                LocalDate.now(), LoanAccount.RepaymentType.EQUAL_PRINCIPAL, testLedger);
         assertEquals(0, account.getRemainingAmount().compareTo(BigDecimal.valueOf(21429.16)));
 
-        boolean result = accountController.editLoanAccount(
-                account,
-                "Updated Car Loan",
-                "Updated Notes",
-                false,
+        boolean result = accountController.editLoanAccount(account, "Updated Car Loan",
+                "Updated Notes", false,
                 60, //new total periods
                 1, //new repaid periods
                 BigDecimal.valueOf(4), //4% annual interest rate
                 BigDecimal.valueOf(20000.00), //loan amount
                 LocalDate.now().minusMonths(1), //new repayment date
-                LoanAccount.RepaymentType.EQUAL_INTEREST
-        );
+                LoanAccount.RepaymentType.EQUAL_INTEREST);
         assertTrue(result);
 
         LoanAccount editedAccount = (LoanAccount) accountDAO.getAccountById(account.getId());
@@ -1100,26 +1178,14 @@ public class AccountControllerTest {
 
     @Test
     public void testEditBorrowingAccount_Success() throws SQLException {
-        BorrowingAccount account = accountController.createBorrowingAccount(
-                testUser,
-                "Bob",
+        BorrowingAccount account = accountController.createBorrowingAccount(testUser, "Bob",
                 BigDecimal.valueOf(3000.00), //amount borrowed
-                "Initial Notes",
-                true,
-                true,
-                null,
-                LocalDate.now()
+                "Initial Notes", true, true, null, LocalDate.now(), testLedger
         );
 
-        boolean result = accountController.editBorrowingAccount(
-                account,
-                "Updated Bob",
+        boolean result = accountController.editBorrowingAccount(account, "Updated Bob",
                 BigDecimal.valueOf(2500.00), //new amount borrowed
-                "Updated Notes",
-                false,
-                false,
-                true
-        );
+                "Updated Notes", false, false, true);
         assertTrue(result);
         assertEquals(0, account.getRemainingAmount().compareTo(BigDecimal.valueOf(2500.00)));
 
@@ -1136,26 +1202,13 @@ public class AccountControllerTest {
 
     @Test
     public void testEditLendingAccount_Success() throws SQLException {
-        LendingAccount account = accountController.createLendingAccount(
-                testUser,
-                "Charlie",
+        LendingAccount account = accountController.createLendingAccount(testUser, "Charlie",
                 BigDecimal.valueOf(4000.00), //amount lent
-                "Initial Notes",
-                true,
-                true,
-                null,
-                LocalDate.now()
-        );
+                "Initial Notes", true, true, null, LocalDate.now(), testLedger);
 
-        boolean result = accountController.editLendingAccount(
-                account,
-                "Updated Charlie",
+        boolean result = accountController.editLendingAccount(account, "Updated Charlie",
                 BigDecimal.valueOf(3500.00), //new amount lent
-                "Updated Notes",
-                false,
-                false,
-                true
-        );
+                "Updated Notes", false, false, true);
         assertTrue(result);
         assertEquals(0, account.getBalance().compareTo(BigDecimal.valueOf(3500.00)));
 
@@ -1163,7 +1216,6 @@ public class AccountControllerTest {
         assertNotNull(editedAccount);
         assertEquals("Updated Charlie", editedAccount.getName());
         assertEquals(0, editedAccount.getBalance().compareTo(BigDecimal.valueOf(3500.00)));
-        assertEquals(0, editedAccount.getLendingAmount().compareTo(BigDecimal.valueOf(3500.00)));
         assertEquals("Updated Notes", editedAccount.getNotes());
         assertFalse(editedAccount.getIncludedInNetAsset());
         assertFalse(editedAccount.getSelectable());
@@ -1173,13 +1225,8 @@ public class AccountControllerTest {
     @Test
     public void testHideBasicAccount_Success() throws SQLException {
         BasicAccount account = accountController.createBasicAccount("Savings Account",
-                BigDecimal.valueOf(5000),
-                AccountType.CASH,
-                AccountCategory.FUNDS,
-                testUser,
-                null,
-                true,
-                true);
+                BigDecimal.valueOf(5000), AccountType.CASH, AccountCategory.FUNDS, testUser, null,
+                true, true);
 
         boolean result = accountController.hideAccount(account);
         assertTrue(result);
@@ -1191,18 +1238,12 @@ public class AccountControllerTest {
 
     @Test
     public void testHideCreditAccount_Success() throws SQLException {
-        CreditAccount account = accountController.createCreditAccount(
-                "My Credit Card",
-                null,
+        CreditAccount account = accountController.createCreditAccount("My Credit Card", null,
                 BigDecimal.valueOf(2500.00), //balance
-                true,
-                true,
-                testUser,
-                AccountType.CREDIT_CARD,
+                true, true, testUser, AccountType.CREDIT_CARD,
                 BigDecimal.valueOf(6000.00), //credit limit
                 BigDecimal.valueOf(1500.00), //current debt
-                null,
-                null);
+                null, null);
 
         boolean result = accountController.hideAccount(account);
         assertTrue(result);
@@ -1214,18 +1255,12 @@ public class AccountControllerTest {
 
     @Test
     public void testHideLoanAccount_Success() throws SQLException {
-        LoanAccount account = accountController.createLoanAccount(
-                "Car Loan",
-                null,
-                true,
-                testUser,
-                48,
-                0,
+        LoanAccount account = accountController.createLoanAccount("Car Loan", null, true,
+                testUser, 48, 0,
                 BigDecimal.valueOf(3.5), //3.5% annual interest rate
                 BigDecimal.valueOf(20000.00), //loan amount
                 null, //no receiving account
-                LocalDate.now(),
-                LoanAccount.RepaymentType.EQUAL_PRINCIPAL);
+                LocalDate.now(), LoanAccount.RepaymentType.EQUAL_PRINCIPAL, testLedger);
 
         boolean result = accountController.hideAccount(account);
         assertTrue(result);
@@ -1235,6 +1270,4 @@ public class AccountControllerTest {
         assertTrue(hiddenAccount.getHidden());
     }
 
-
 }
-
